updating_talk_files

--- a/my_presentations/iit_bombay_20min.html
+++ b/my_presentations/iit_bombay_20min.html
@@ -509,7 +509,7 @@
 							<li id="orange">Community detection and percolation.</li>
 							<br>
 						<li id="lightred">Statistical inference problems on random graphs</li>
-					<li id="lightred"> Spectral and SDP algorithms.<span style="font-size: 15px;">[Abbe, Fan, Wang, Zhong (2020)]</span> </li>
+					<li id="lightred"> Spectral and SDP algorithms.<!--<span style="font-size: 15px;">[Abbe, Fan, Wang, Zhong (2020)]</span>--> </li>
 				<li id="lightred"> Load balancing on spatial queues.</li></ul>
 					</div></div>
 					</section>
